--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name='viewport' content='initial-scale=1, viewport-fit=cover'>
     <title>vue-reddit-client</title>
   </head>
   <body>
